<resources>
    <string name="app_name">Alaari Patient</string>
    <string name="sign_up_as_a_user">Sign up as a User</string>
    <string name="sign_in">Sign In</string>
    <string name="register_as_a_doctor">Register as a Doctor</string>
    <string name="lorem_ipsum_is_the_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is the simply dummy text of the printing and typesetting industry.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile">Mobile</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="last_name_user">Last Name</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="sign_up_as_a_company">Sign up as a company</string>
    <string name="sign_up_as_a_doctor">Sign Up as a Doctor</string>
    <string name="join_us_to_start_searching">Join us to start searching</string>
    <string name="register_as_a_customer">Register as a Customer</string>
    <string name="street">Street</string>
    <string name="citytown">CityTown</string>
    <string name="experience">Experience</string>
    <string name="title">Title</string>
    <string name="area">Area</string>
    <string name="open">opneDrawer</string>
    <string name="close">closeDrawer</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="bank_of_consultants">Bank of Consultants</string>
    <string name="consultant">Consultant</string>
    <string name="dr_m_ahmed">Dr M.Ahmed</string>
    <string name="appointments">Appointments</string>
    <string name="services_inbox">Services Inbox</string>
    <string name="follow_up">Follow Up</string>
    <string name="prescription">Prescription</string>
    <string name="billing">Billing</string>
    <string name="courses">Courses</string>
    <string name="family_tree">Family Tree</string>
    <string name="member_invitation">Member Invitation</string>
    <string name="settings">Settings</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_your_email_for_the_verification_proccesss_we_will_send_4_digits_code_to_your_email">Enter your email for the verification proccesss, we will send 4 digits code to your email.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selected_item">Selected item:</string>
    <string name="recommendations">Recommendations</string>
    <string-array name="Languages">
        <item>Arabic</item>
        <item>English</item>
    </string-array>
    <string-array name="Country">
        <item>Pakistan</item>
        <item>Arabia</item>
    </string-array>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="City">
        <item>RYK</item>
        <item>Multan</item>
    </string-array>
</resources>