<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_110sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageC"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/userProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/dr_m_ahmed"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toEndOf="@+id/imageC"
                app:layout_constraintTop_toTopOf="@+id/imageC" />

            <TextView
                android:id="@+id/userTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:text="@string/consultant"
                android:textColor="@color/textsmoothcolor"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/imageC"

                app:layout_constraintStart_toStartOf="@+id/userName"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

            <TextView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/rounded_strokeshape"
                android:drawableEnd="@drawable/arrow_right"
                android:gravity="center|start"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:text="@string/edit_profile"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/userTitle"
                app:layout_constraintTop_toBottomOf="@+id/userTitle"></TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/layout_top_rounded_shape"
            android:backgroundTint="@color/greencolor"
            android:padding="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
            <TextView
                android:id="@+id/apoinments"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_23sdp"
                android:drawableStart="@drawable/appoinments"
                android:drawablePadding="@dimen/_20sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:text="@string/appointments"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/serviceInbox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_23sdp"
                android:drawableStart="@drawable/servicesinbox"
                android:drawablePadding="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:text="@string/services_inbox"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/apoinments" />
            <TextView
                android:id="@+id/followUp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_23sdp"
                android:drawableStart="@drawable/followup"
                android:drawablePadding="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:text="@string/follow_up"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/serviceInbox" />
            <TextView
                android:id="@+id/prescription"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_23sdp"
                android:drawableStart="@drawable/prescription"
                android:drawablePadding="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:text="@string/prescription"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/followUp"/>
            <TextView
                android:id="@+id/billing"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_23sdp"
                android:drawableStart="@drawable/followup"
                android:drawablePadding="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:text="@string/billing"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prescription" />
            <TextView
                android:id="@+id/courses"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_23sdp"
                android:drawableStart="@drawable/groccery"
                android:drawablePadding="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:text="@string/courses"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/billing" />
            <TextView
                android:id="@+id/familtyTree"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_23sdp"
                android:drawableStart="@drawable/people"
                android:drawablePadding="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:text="@string/family_tree"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/courses" />
            <TextView
                android:id="@+id/memberInvitation"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_23sdp"
                android:drawableStart="@drawable/accountprof"
                android:drawablePadding="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:text="@string/member_invitation"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/familtyTree" />
            <TextView
                android:drawablePadding="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_23sdp"
                android:drawableStart="@drawable/setting"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:text="@string/settings"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/memberInvitation"/>

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_23sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:drawableStart="@drawable/logout"
                android:drawablePadding="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>