<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".signupas.SignUpAs">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/animationL"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_28sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/join_us_to_start_searching"
            android:textAlignment="center"
            android:textColor="@color/black"

            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_27sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_27sdp"
            android:fontFamily="@font/poppins"
            android:lineSpacingExtra="@dimen/_7sdp"
            android:text="@string/lorem_ipsum_is_the_simply_dummy_text_of_the_printing_and_typesetting_industry"
            android:textAlignment="center"
            android:textColor="@color/textsmoothcolor"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text" />

        <TextView
            android:id="@+id/userSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:gravity="center"
            android:background="@drawable/buttonshape"
            android:backgroundTint="@color/greencolor"
            android:text="@string/sign_up_as_a_user"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2" />

        <TextView
            android:id="@+id/doctorSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/buttonshape"
            android:backgroundTint="@color/bluecolor"
            android:text="@string/sign_up_as_a_doctor"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userSignUp" />

        <TextView
            android:id="@+id/signUpCompany"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:background="@drawable/buttonshape"
            android:backgroundTint="@color/redcolor"
            android:text="@string/sign_up_as_a_company"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/doctorSignUp" />

        <TextView
            android:id="@+id/signText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/goSignInActivity"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpCompany"
            />

        <TextView
            android:id="@+id/goSignInActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/_6sdp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/greencolor"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@id/signText"
            app:layout_constraintBottom_toBottomOf="@id/signText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/signText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>