<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".loginacitivity.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1" />

        <TextView
            android:id="@+id/text"
            android:fontFamily="@font/poppins_semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_26sdp"
            android:text="Welcome To Alaarif!"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/text2"
            android:fontFamily="@font/poppins"
            android:lineSpacingExtra="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_27sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_27sdp"
            android:text="Lorem Ipsum is the simply dummy text of the printing and typesetting industry."
            android:textAlignment="center"
            android:textColor="@color/textsmoothcolor"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text" />
        <LinearLayout
            android:id="@+id/emailL"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/editstroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2" >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/emailEd"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@android:color/transparent"
                    android:hint="@string/email_address"
                    android:padding="@dimen/_10ssp"
                    android:gravity="center|start"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/poppins_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/emailV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:id="@+id/emailV"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/passwordL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/editstroke"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailL">
            <EditText
                android:id="@+id/passwordEd"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:gravity="center|start"
                android:padding="@dimen/_10ssp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/passwordVisibility"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/passwordVisibility"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:src="@drawable/seeeye"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toTopOf="@id/signInBtn"
            app:layout_constraintEnd_toEndOf="@id/passwordL"
            app:layout_constraintTop_toBottomOf="@id/passwordL" />

        <TextView
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/buttonshape"
            android:backgroundTint="@color/greencolor"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/signText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetPassword" />

        <TextView
            android:id="@+id/signText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/signInBtn"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/goSignInActivity"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/goSignInActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/_3sdp"
            android:textColor="@color/greencolor"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@id/signText"
            app:layout_constraintBottom_toBottomOf="@id/signText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/signText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>